# SafeEn

./: .gitignore  Cargo.toml  DESIGN.md  README.md  db.sfe  test.sfe  users.sfe
examples/: big_data.json  big_data.sfe  db.sfe  load_big_data.rs  save_big_data.rs
examples/big_data/: Cargo.toml
src/: lib.rs  table.rs  utils.rs
