[package]
name = "safe_en"
version = "1.6.6"
authors = ["Behemehal <info@behemehal.net>", "Ahmetcan Aksu <ahmetcanaksu@behemehal.net>"]
edition = "2021"
description = "Local database solution with clean and strict data integrity."
categories = ["database"]
keywords = ["database", "local-database"]
license = "GPL-2.0"
readme = "README.md"
documentation = "https://docs.rs/safe_en"
repository = "https://github.com/behemehal/SafeEn"

[[example]]
name= "save_big_data"
path = "examples/save_big_data.rs"

[[example]]
name= "load_big_data"
path = "examples/load_big_data.rs"

[features]
default = []
no_std = ["not-io"]

[dependencies]
not-io = { version = "0.1.0-alpha", optional = true }

[dev-dependencies]
serde_json = "1.0"